@@ -38,7 +38,7 @@ ARRAY - (apiurl,password,user)
 =cut
 
 sub parseConfig {
-    my $homedir = shift;
+    my ($homedir,$login_only) = @_;
     my $results = {};
     my $arr =[];
 
@@ -47,13 +47,14 @@ sub parseConfig {
         chomp;
         @$arr = split(/=/,$_);
         if (scalar(@$arr) != 2) {
-            warn("Could not parse $_ in tlreport config\n");
+            warn("Could not parse $_ in '$homedir/.testrailrc'!\n");
             next;
         }
         $results->{lc($arr->[0])} = $arr->[1];
     }
     close($fh);
-    return ($results->{'apiurl'},$results->{'password'},$results->{'user'});
+    return ($results->{'apiurl'},$results->{'password'},$results->{'user'}) if $login_only;
+    return $results;
 }
 
 1;
